--- a/FIAS.Search/Pages/Index.razor
+++ b/FIAS.Search/Pages/Index.razor
@@ -1,9 +1,52 @@
 ﻿@page "/"
+@using FIAS.API.Models;
+
 
 <PageTitle>Index</PageTitle>
+<div class="container">
+    <h1>Hello, world!</h1>
+    Welcome to your new app.
+    
+    <div class="d-flex">
+        <input @bind="Input"/>
+        <button class="btn btn-primary" @onclick="Search">Search</button>
+    </div>
+    
+    @if (Result == null)
+    {
+        <p><em>Введите адрес</em></p>
+    }
+    else
+    {
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>GUID</th>
+                    <th>Адрес</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var forecast in Result)
+                {
+                    <tr>
+                        <td>@forecast.ObjectGUID</td>
+                        <td>@forecast.AddressFull</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+</div>
 
-<h1>Hello, world!</h1>
+@*<SurveyPrompt Title="How is Blazor working for you?" />*@
 
-Welcome to your new app.
+@code{
+    private List<FIASRegistryAddress>? Result;
+    private string Input="";
+    private void Search()
+    {
+        Input = "Test";
+    }
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+}
