--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,10 +1,12 @@
 :root {
-    --md-primary-fg-color: #0066b3;
-    --md-footer-bg-color: #0066b3;
+    --fias-color:#0066b3;
+    --md-primary-fg-color: var(--fias-color);
+    --md-primary-fg-color--light: var(--fias-color);
+    --md-primary-fg-color--dark:  var(--fias-color);
 }
 
-:root>* {
-    --md-footer-bg-color: #0066b3;
+:root * {
+    --md-footer-bg-color: var(--fias-color);
 }
 
 .md-typeset {
